--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,14 +8,14 @@ jobs:
           uses: actions/checkout@v2
         - uses: actions/setup-node@v1
           with:
-            node-version: 16.13.0
+            node-version: 16.3.0
         - name: Install
           run: npm install
         - name: Test
-        env:
-          BROWSERSTACK_USER: ${{secrets.BS_USER}}
-          BROWSERSTACK_KEY: ${{secrets.BS_KEY}}
-          run:  npx wdio config\wdio.config.js --spec test\specs\ios\e2e.spec.js
+          env:
+            BROWSERSTACK_USER: ${{ secrets.BS_USER }}
+            BROWSERSTACK_KEY: ${{ secrets.BS_KEY }}
+          run: npx wdio npx wdio config/wdio.conf.js --spec test/specs/ios/e2e.spec.js
         - uses: actions/upload-artifact@v1
           if: failure()
           with:
