--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,7 +15,7 @@ jobs:
           env:
             BROWSERSTACK_USER: ${{ secrets.BS_USER }}
             BROWSERSTACK_KEY: ${{ secrets.BS_KEY }}
-          run: npx wdio npx wdio config/wdio.conf.js
+          run: npx wdio config/wdio.conf.js
         - uses: actions/upload-artifact@v1
           if: failure()
           with:
